--- a/base/BUILD
+++ b/base/BUILD
@@ -1,6 +1,6 @@
 # Author: Jianbo Zhu (jianbo.zhujb@gmail.com)
 #
-# Blade build file for 'cobra/base'
+# Blade build file for 'base'
 
 cc_library(
   name = 'timestamp',
